# catchcuda

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  Person.h  Resource.cpp  Resource.h  main.cpp
src/beautiful_cpp_stl_algorithms/: CMakeLists.txt  CatchMain.cpp  moderncpplib.cpp
src/libmycuda/: CMakeLists.txt  bandwidthTest.cu  deviceQuery.cu  practice.cu  practice.h  thrust.cu  thrust.h  utils.h  vectorAdd.cu  vectorAdd.h
src/libperson/: CMakeLists.txt  Person.cpp  Person.h  Resource.cpp  Resource.h
src/python/: clion.py
src/tests/: CMakeLists.txt  TestMis.cpp  TestStd.cpp
tests/: TestMis.cpp  TestStd.cpp  Tests.cpp  catch.hpp  moderncpplib.cpp
